# yi-editor-agent

./: README.md  output.csv  pyproject.toml
output/: output.json
tests/: delete_meta.py  unity_test.py
vector_db/cdff9e9d-b865-4823-9f27-17cd1be25d24/: index_metadata.pickle
yi_editor_agent/: streamlit_web_ui.py
yi_editor_agent/rag/: langchain_test.py
yi_editor_agent/ui/: streamlit_web_ui.py
yi_editor_agent/utils/: auto_tag_async.py  auto_tag_image_async.py  config.py  embedding.py  generate_info_for_ue.py  generate_info_for_unity.py  helper.py  unity.cs  unity_listen_server.cs
