[tool.poetry]
name = "yi-editor-agent"
version = "0.1.0"
description = ""
authors = ["Yimi81 <1548222878@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
streamlit = "^1.39.0"
unitypy = "^1.20.12"
tqdm = "^4.66.6"
openai = "^1.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
